<package format="3">
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <description>quadrotor_msgs</description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <url>http://ros.org/wiki/quadrotor_msgs</url>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
